<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:longClickable="true"
    android:padding="12dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/product_image_background"
            android:padding="4dp"
            android:scaleType="fitCenter"
            tools:src="@drawable/meat" />
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/layoutInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/cardViewImage"
        app:layout_constraintEnd_toStartOf="@id/layoutDaysRemaining"
        app:layout_constraintStart_toEndOf="@id/cardViewImage"
        app:layout_constraintTop_toTopOf="@id/cardViewImage">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Свинина" />

        <TextView
            android:id="@+id/item_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darker_gray"
            android:textSize="14sp"
            tools:text="мясная продукция" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_expiry_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_expiry_label"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_expiry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="13.01.25" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_quantity_label"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="500 гр." />

            <LinearLayout
                android:id="@+id/layout_plus_minus"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:background="#F0F0F0"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/button_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text=" – "
                    android:textColor="@color/darker_gray" />

                <TextView
                    android:id="@+id/button_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text=" + "
                    android:textColor="@color/darker_gray" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDaysRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/cardViewImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cardViewImage">

        <TextView
            android:id="@+id/item_days_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:text="-3"
            tools:textColor="@color/app_dark_red" />

        <TextView
            android:id="@+id/item_days_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_days_label"
            android:textColor="@color/darker_gray"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>